--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="https://media.istockphoto.com/id/1293763250/photo/cute-kitten-licking-glass-table-with-copy-space.webp?b=1&s=170667a&w=0&k=20&c=f0VoM2wiDR3iZVTC0n-WK4cfstZEfbDh33lWc2KRbFM=" alt="cat-image"/>
     <script type="text/javascript" src="./script.js">
 </script>
 
